--- a/interface/stp.html
+++ b/interface/stp.html
@@ -10,7 +10,7 @@
     <script src="../js/bootstrap.min.js"></script>
     <style>
         .current {
-            background-color: #ff3333;
+            background-color: #f26d5b;
             color: white;
             font: bold;
         }
