--- a/newmenu.html
+++ b/newmenu.html
@@ -19,7 +19,7 @@
                     <li>
                         <a href="#interfaceSetting" class="nav-header collapsed" data-toggle="collapse">
                             接口管理
-                            <i class="fa fa-leaf" style="font-size: 20px;color: green;"></i>
+                            <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
                         </a>
                         <ul id="interfaceSetting" class="nav nav-list collapse secondmenu">
                             <li>
@@ -38,7 +38,7 @@
                     </li>
                     <li>
                         <a href="#L2Setting" class="nav-header collapsed" data-toggle="collapse">L2协议
-                            <i class="fa fa-leaf" style="font-size: 20px;color: green;"></i>
+                            <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
                         </a>
                         <ul id="L2Setting" class="nav nav-list collapse secondmenu">
                             <li>
@@ -54,7 +54,7 @@
                     </li>
                     <li>
                         <a href="#L3Setting" class="nav-header collapsed" data-toggle="collapse">L3协议
-                            <i class="fa fa-leaf" style="font-size: 20px;color: green;"></i>
+                            <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
                         </a>
                         <ul id="L3Setting" class="nav nav-list collapse secondmenu">
                             <li>
@@ -70,7 +70,7 @@
                     </li>
                     <li>
                         <a href="#SysMain" class="nav-header collapsed" data-toggle="collapse">软件维护
-                            <i class="fa fa-leaf" style="font-size: 20px;color: green;"></i>
+                            <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
                         </a>
                         <ul id="SysMain" class="nav nav-list collapse secondmenu">
                             <li>
