--- a/L3Protocal/ospf.html
+++ b/L3Protocal/ospf.html
@@ -78,7 +78,8 @@
         </div>
     </div>
     <div class="row" id="ospfRedis" style="max-width: 98%;">
-        <div id="ospfTable" class="col-md-offset-2 col-lg-offset-2 col-md-4 col-lg-4" style="transform: translateX(11%);">
+        <div id="ospfTable" class="col-md-offset-2 col-lg-offset-2 col-md-4 col-lg-4"
+            style="transform: translateX(11%);">
             <h3 style="text-align: center;text-transform: uppercase;">ospf network</h3>
             <div id="netHead">
                 <table class="table table-striped table-bordered">
