--- a/interface/vlan.html
+++ b/interface/vlan.html
@@ -251,6 +251,8 @@
         var startRow = 1;
         var endRow = 10;
         var pageDataSet = [];
+        //新建时验证
+        var existID = [];
         function getData() {
             //模拟数据
             for (var i = 0; i < 4096; i++) {
