--- a/interface/trunk.html
+++ b/interface/trunk.html
@@ -49,87 +49,98 @@
         TRUNK配置</h3>
     <br>
     <div style="height: 50px;">
-        <button type="button" class="btn btn-primary" style="float: left !important;" id="btnCreate">新建</button>
+        <button type="button" class="btn btn-primary" style="float: left !important;margin-left: 5%;" id="btnCreate">新建</button>
     </div>
-    <form>
-        <table id="trunkTable" class="table table-striped table-bordered table-hover" style="width: 95%;">
-            <thead style="font-weight: bolder;">
-                <tr>
-                    <td width="10%">TRUNK名称</td>
-                    <td width="10%">TRUNK描述</td>
-                    <td width="10%">管理状态</td>
-                    <td width="10%">操作状态</td>
-                    <td width="10%">调度策略</td>
-                    <td width="10%">PVID</td>
-                    <td width="10%">MTU</td>
-                    <td width="20%">ETH成员</td>
-                    <td>操作</td>
-                </tr>
-            </thead>
-            <tbody id="tBody">
-                <tr>
-                    <td id="row1" name="txtTrunkNo" value="1">trunk1</td>
-                    <td>
-                        <span name="txtDes" value="测试数据1">测试数据1</span>
-                    </td>
-                    <td>
-                        <span name="txtManStatus" value="up">up</span>
-                    </td>
-                    <td>
-                        <span name="txtOperStatus" value="up">up</span>
-                    </td>
-                    <td>
-                        <span name="txtStrategy" value="port-based">port-based</span>
-                    </td>
-                    <td>
-                        <span name="txtPvid" value="2">1</span>
-                    </td>
-                    <td>
-                        <span name="txtMtu" value="1500">1500</span>
-                    </td>
-                    <td>
-                        <span name="txtEthGroup" value="eth0/5 eth0/6">eth0/5 eth0/6</span>
-                    </td>
-                    <td>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit" value="row1">修改
-                        </button>
-                        <button type="button" class="btn btn-primary" name="btnDelete" value="row1">删除
-                        </button>
-                    </td>
-                </tr>
-                <tr>
-                    <td id="row2" name="txtTrunkNo" value="2">trunk2</td>
-                    <td>
-                        <span name="txtDes" value="测试数据2">测试数据2</span>
-                    </td>
-                    <td>
-                        <span name="txtManStatus" value="up">up</span>
-                    </td>
-                    <td>
-                        <span name="txtOperStatus" value="up">up</span>
-                    </td>
-                    <td>
-                        <span name="txtStrategy" value="port-based">port-based</span>
-                    </td>
-                    <td>
-                        <span name="txtPvid" value="2">1</span>
-                    </td>
-                    <td>
-                        <span name="txtMtu" value="2500">2500</span>
-                    </td>
-                    <td>
-                        <span name="txtEthGroup" value="eth0/7 eth0/8">eth0/7 eth0/8</span>
-                    </td>
-                    <td>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit" value="row2">修改
-                        </button>
-                        <button type="button" class="btn btn-primary" name="btnDelete" value="row2">删除
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </form>
+    <div class="container-fluid" style="width: 95%;">
+        <div class="row">
+            <div id="trunkHead">
+                <table class="table table-striped table-bordered table-hover">
+                    <thead style="font-weight: bolder;">
+                        <tr>
+                            <td width="10%">TRUNK名称</td>
+                            <td width="10%">TRUNK描述</td>
+                            <td width="10%">管理状态</td>
+                            <td width="10%">操作状态</td>
+                            <td width="10%">调度策略</td>
+                            <td width="10%">PVID</td>
+                            <td width="10%">MTU</td>
+                            <td width="20%">ETH成员</td>
+                            <td>操作</td>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <div id="trunkTable" style="height:700px;overflow-y:auto;overflow-x: hidden;margin-top: -22px;">
+                <table class="table table-striped table-bordered table-hover">
+                    <tbody id="tBody">
+                        <tr>
+                            <td id="row1" name="txtTrunkNo" value="1">trunk1</td>
+                            <td>
+                                <span name="txtDes" value="测试数据1">测试数据1</span>
+                            </td>
+                            <td>
+                                <span name="txtManStatus" value="up">up</span>
+                            </td>
+                            <td>
+                                <span name="txtOperStatus" value="up">up</span>
+                            </td>
+                            <td>
+                                <span name="txtStrategy" value="port-based">port-based</span>
+                            </td>
+                            <td>
+                                <span name="txtPvid" value="2">1</span>
+                            </td>
+                            <td>
+                                <span name="txtMtu" value="1500">1500</span>
+                            </td>
+                            <td>
+                                <span name="txtEthGroup" value="eth0/5 eth0/6">eth0/5 eth0/6</span>
+                            </td>
+                            <td>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit"
+                                    value="row1">修改
+                                </button>
+                                <button type="button" class="btn btn-primary" name="btnDelete" value="row1">删除
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td id="row2" name="txtTrunkNo" value="2">trunk2</td>
+                            <td>
+                                <span name="txtDes" value="测试数据2">测试数据2</span>
+                            </td>
+                            <td>
+                                <span name="txtManStatus" value="up">up</span>
+                            </td>
+                            <td>
+                                <span name="txtOperStatus" value="up">up</span>
+                            </td>
+                            <td>
+                                <span name="txtStrategy" value="port-based">port-based</span>
+                            </td>
+                            <td>
+                                <span name="txtPvid" value="2">1</span>
+                            </td>
+                            <td>
+                                <span name="txtMtu" value="2500">2500</span>
+                            </td>
+                            <td>
+                                <span name="txtEthGroup" value="eth0/7 eth0/8">eth0/7 eth0/8</span>
+                            </td>
+                            <td>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit"
+                                    value="row2">修改
+                                </button>
+                                <button type="button" class="btn btn-primary" name="btnDelete" value="row2">删除
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -227,7 +238,7 @@
         </div>
     </div>
     <div>
-        <form id="hPostForm" style="display: none; visibility:hidden;"  method="post" action="/goform/trunkFormPost">
+        <form id="hPostForm" style="display: none; visibility:hidden;" method="post" action="/goform/trunkFormPost">
             <input name="hNo" value="" />
             <input name="hDes" value="" />
             <input name="hManStatus" value="" />
@@ -267,12 +278,15 @@
         //鼠标是否在【多选下拉框div】上面（如果在div上面，需要控制鼠标的点击事件，不让div隐藏；否则要让该div隐藏）
         var indiv = false;
         function getData() {
-            dataset = [
-                ["1", "测试数据1", "1", "1", "1", "2", "1000", "eth0/0,eth0/1"],
-                ["2", "测试数据2", "0", "0", "2", "3", "2000", "eth0/3,eth0/5"],
-                ["4", "测试数据3", "1", "0", "3", "4", "3000", "eth0/2,eth0/4"],
-                ["6", "测试数据4", "0", "1", "2", "8", "4000", "eth0/6,eth0/8"]
-            ];
+            for (let i = 0; i < 30; i++) {
+                dataset.push([i, "测试数据1", i%2, i%2, i%4, i, "1000", "eth0/0,eth0/1"]);
+            }
+            // dataset = [
+            //     ["1", "测试数据1", "1", "1", "1", "2", "1000", "eth0/0,eth0/1"],
+            //     ["2", "测试数据2", "0", "0", "2", "3", "2000", "eth0/3,eth0/5"],
+            //     ["4", "测试数据3", "1", "0", "3", "4", "3000", "eth0/2,eth0/4"],
+            //     ["6", "测试数据4", "0", "1", "2", "8", "4000", "eth0/6,eth0/8"]
+            // ];
             ethPortSet = ["eth0/0", "eth0/1", "eth0/2", "eth0/3", "eth0/4", "eth0/5", "eth0/6", "eth0/7", "eth0/8"];
             if (dataset.length > 0) {
                 for (var i = 0; i < dataset.length; i++) {
@@ -286,21 +300,22 @@
                 var html = ('');
                 for (var i = 0; i < count; i++) {
                     html += ('<tr>');
-                    html += ('<td id="row' + dataset[i][0] + '" name="txtTrunkNo" value="' + dataset[i][0] + '">' + dataset[i][0] + '</td>');
-                    html += ('<td><span name="txtDes" value="' + dataset[i][1] + '">' + dataset[i][1] + '</span></td>');
-                    html += ('<td><span name="txtManStatus"value="' + dataset[i][2] + '" >' + statusArray[dataset[i][2]] + '</span> </td>');
-                    html += ('<td><span name="txtOperStatus"value="' + dataset[i][3] + '" >' + statusArray[dataset[i][3]] + '</span></td>');
-                    html += ('<td><span name="txtStrategy" value="' + dataset[i][4] + '">' + strategyArray[dataset[i][4]] + '</span></td>');
-                    html += ('<td> <span name="txtPvid" value="' + dataset[i][5] + '">' + dataset[i][5] + '</span> </td>');
-                    html += ('<td><span name="txtMtu" value="' + dataset[i][6] + '">' + dataset[i][6] + '</span></td>');
-                    html += ('<td><span name="txtEthGroup" value="' + dataset[i][7] + '">' + dataset[i][7] + '</span></td>');
+                    html += ('<td width="10%" id="row' + dataset[i][0] + '" name="txtTrunkNo" value="' + dataset[i][0] + '">' + dataset[i][0] + '</td>');
+                    html += ('<td width="10%"><span name="txtDes" value="' + dataset[i][1] + '">' + dataset[i][1] + '</span></td>');
+                    html += ('<td width="10%"><span name="txtManStatus"value="' + dataset[i][2] + '" >' + statusArray[dataset[i][2]] + '</span> </td>');
+                    html += ('<td width="10%"><span name="txtOperStatus"value="' + dataset[i][3] + '" >' + statusArray[dataset[i][3]] + '</span></td>');
+                    html += ('<td width="10%"><span name="txtStrategy" value="' + dataset[i][4] + '">' + strategyArray[dataset[i][4]] + '</span></td>');
+                    html += ('<td width="10%"> <span name="txtPvid" value="' + dataset[i][5] + '">' + dataset[i][5] + '</span> </td>');
+                    html += ('<td width="10%"><span name="txtMtu" value="' + dataset[i][6] + '">' + dataset[i][6] + '</span></td>');
+                    html += ('<td width="20%"><span name="txtEthGroup" value="' + dataset[i][7] + '">' + dataset[i][7] + '</span></td>');
                     html += ('<td>');
-                    html += ('<button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit" value="row' + dataset[i][0] + '">修改</button>');
-                    html += ('<button type="button" class="btn btn-primary" name="btnDelete" value="' + dataset[i][0] + '">删除</button>');
+                    html += ('<button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit" style="margin-left:10%;" value="row' + dataset[i][0] + '">修改</button>');
+                    html += ('<button type="button" class="btn btn-primary" name="btnDelete"  style="margin-left:10%;" value="' + dataset[i][0] + '">删除</button>');
                     html += ('</td>');
                     html += ('</tr>');
                 }
                 $("#tBody").html(html);
+                isScroll();
             }
         }
         function loadDropDown() {
@@ -409,7 +424,7 @@
                     alert("eth最多选择8个");
                 }
                 for (var index = 0; index < tmpRowArray.length; index++) {
-                    if(oldRowData.trim()!=""&& oldRowData.findIndex(value=>value == tmpRowArray[index])>=0){
+                    if (oldRowData.trim() != "" && oldRowData.findIndex(value => value == tmpRowArray[index]) >= 0) {
                         continue;
                     }
                     else if (selectedAllList.findIndex(value => value == tmpRowArray[index]) >= 0) {
@@ -419,9 +434,16 @@
                     }
                 }
             }
-
             return flag;
         }
+
+        function isScroll() {
+            let eHeight = $("#trunkTable")[0].scrollHeight;
+            if (eHeight > 700) {
+                $("#trunkHead").attr("style", "padding-right:17px;");
+            }
+        }
+
         //新建按钮点击事件
         $("#btnCreate").click(function () {
             isCreateNew = true;
@@ -479,8 +501,8 @@
 
         $("#btnSave").click(function () {
             var trunkNo = $("#editTrunkNo").val().trim();
-            if(isCreateNew){
-                trunkNo = "trunk"+trunkNo;
+            if (isCreateNew) {
+                trunkNo = "trunk" + trunkNo;
             }
             var trunDes = $("#editTrunkDes").val().trim();
             var pvid = $("#editPvid").val().trim();
@@ -489,7 +511,6 @@
             var ethGroup = $("#selEthGroup").val().trim();
             var manStatus = $("#editManStatus").val();
             var operStatus = $("#txtOperStatus").attr("value");
-            debugger;
             if (!checkData(trunkNo, trunDes, pvid, strategy, mtu, ethGroup)) {
                 return;
             }
