--- a/interface/vlan.html
+++ b/interface/vlan.html
@@ -56,73 +56,78 @@
         设备VLAN配置</h3>
     <br>
     <div style="height: 50px;">
-        <button type="button" class="btn btn-primary" style="float: left !important;" id="btnCreate">新建</button>
+        <button type="button" class="btn btn-primary" style="float: left !important;margin-left: 5%;" id="btnCreate">新建</button>
     </div>
-    <form>
-        <table id="myTable" class="table table-striped table-bordered table-hover" style="width: 95%;">
-            <thead style="font-weight: bolder;">
-                <tr>
-                    <td width="10%">VLAN名称</td>
-                    <td width="10%">VLAN 类型</td>
-                    <td width="20%">VLAN 描述</td>
-                    <td width="10%">VLAN 状态</td>
-                    <td width="20%">ETH成员</td>
-                    <td width="20%">TRUNK成员</td>
-                    <td>操作</td>
-                </tr>
-            </thead>
-            <tbody id="tBody">
-                <tr>
-                    <td id="row1" name="txtVlanName" value="1">trunk1</td>
-                    <td>
-                        <span name="txtVlanType" value="1">Static</span>
-                    </td>
-                    <td>
-                        <span name="txtVlanDes" value="test vlan">test vlan</span>
-                    </td>
-                    <td>
-                        <span name="txtVlanStatus" value="1">up</span>
-                    </td>
-                    <td>
-                        <span name="txtEthGroup" value="eth0/7 eth0/8">eth0/7 eth0/8</span>
-                    </td>
-                    <td>
-                        <span name="txtTrunkGroup" value="trunk1">trunk1</span>
-                    </td>
-                    <td>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit" value="row1">修改
-                        </button>
-                        <button type="button" class="btn btn-primary" name="btnDelete" value="row1">删除
-                        </button>
-                    </td>
-                </tr>
-                <tr>
-                    <td id="row2" name="txtVlanName" value="2">trunk2</td>
-                    <td>
-                        <span name="txtVlanType" value="2">Dynamic</span>
-                    </td>
-                    <td>
-                        <span name="txtVlanDes" value="test vlan2">test vlan2</span>
-                    </td>
-                    <td>
-                        <span name="txtVlanStatus" value="0">down</span>
-                    </td>
-                    <td>
-                        <span name="txtEthGroup" value="eth0/1 eth0/2">eth0/1 eth0/2</span>
-                    </td>
-                    <td>
-                        <span name="txtTrunkGroup" value="trunk3">trunk3</span>
-                    </td>
-                    <td>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit" value="row2">修改
-                        </button>
-                        <button type="button" class="btn btn-primary" name="btnDelete" value="row2">删除
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </form>
+    <div class="container-fluid" style="width: 95%;">
+        <div class="row">
+            <table id="myTable" class="table table-striped table-bordered table-hover" style="width: 95%;">
+                <thead style="font-weight: bolder;">
+                    <tr>
+                        <td width="10%">VLAN名称</td>
+                        <td width="10%">VLAN 类型</td>
+                        <td width="20%">VLAN 描述</td>
+                        <td width="10%">VLAN 状态</td>
+                        <td width="20%">ETH成员</td>
+                        <td width="20%">TRUNK成员</td>
+                        <td>操作</td>
+                    </tr>
+                </thead>
+                <tbody id="tBody">
+                    <tr>
+                        <td id="row1" name="txtVlanName" value="1">trunk1</td>
+                        <td>
+                            <span name="txtVlanType" value="1">Static</span>
+                        </td>
+                        <td>
+                            <span name="txtVlanDes" value="test vlan">test vlan</span>
+                        </td>
+                        <td>
+                            <span name="txtVlanStatus" value="1">up</span>
+                        </td>
+                        <td>
+                            <span name="txtEthGroup" value="eth0/7 eth0/8">eth0/7 eth0/8</span>
+                        </td>
+                        <td>
+                            <span name="txtTrunkGroup" value="trunk1">trunk1</span>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit"
+                                value="row1">修改
+                            </button>
+                            <button type="button" class="btn btn-primary" name="btnDelete" value="row1">删除
+                            </button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td id="row2" name="txtVlanName" value="2">trunk2</td>
+                        <td>
+                            <span name="txtVlanType" value="2">Dynamic</span>
+                        </td>
+                        <td>
+                            <span name="txtVlanDes" value="test vlan2">test vlan2</span>
+                        </td>
+                        <td>
+                            <span name="txtVlanStatus" value="0">down</span>
+                        </td>
+                        <td>
+                            <span name="txtEthGroup" value="eth0/1 eth0/2">eth0/1 eth0/2</span>
+                        </td>
+                        <td>
+                            <span name="txtTrunkGroup" value="trunk3">trunk3</span>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit"
+                                value="row2">修改
+                            </button>
+                            <button type="button" class="btn btn-primary" name="btnDelete" value="row2">删除
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
